@@ -4,6 +4,18 @@ NitrOS-9 V3.2.9:
 2013/01/28 David Ladd
 M ChangeLog
 M level2/coco3/bootfiles/makefile
+M level2/coco3/makefile
+
+Updated level2/coco3/bootfiles/makefile to create bootfiles
+for headless becker and headless arduino.
+
+Updated level2/coco3/makefile to create boot disk images
+for headless becker and headless arduino.
+
+----------------------------------------------------------
+2013/01/28 David Ladd
+M ChangeLog
+M level2/coco3/bootfiles/makefile
 
 Updated level2/coco3/bootfiles/makefile so that the becker
 os9boot file has ddx0.dd rather then ddd0.dd.
